--- a/src/eda_fifa.ipynb
+++ b/src/eda_fifa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "False"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,18 +51,18 @@
    "source": [
     "api = KaggleApi()\n",
     "api.authenticate()\n",
-    "api.dataset_download_file('brenda89/fifa-world-cup-2022', 'international_matches.csv', path=r'C:\\Users\\viniciushc\\Git_Vinicius\\fifa_2022\\data')"
+    "api.dataset_download_file('brenda89/fifa-world-cup-2022', 'international_matches.csv', path=r'C:\\Users\\viniciushc\\Desktop\\fifa_project\\fifa_2022\\data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ZipFile(r'C:\\Users\\viniciushc\\Git_Vinicius\\fifa_2022\\data\\international_matches.csv.zip', 'r') as zip_file:\n",
+    "with ZipFile(r'C:\\Users\\viniciushc\\Desktop\\fifa_project\\fifa_2022\\data\\international_matches.csv.zip', 'r') as zip_file:\n",
     "    zip_file.extractall(\n",
-    "        r'C:\\Users\\viniciushc\\Git_Vinicius\\fifa_2022\\data'\n",
+    "        r'C:\\Users\\viniciushc\\Desktop\\fifa_project\\fifa_2022\\data'\n",
     "    )"
    ]
   },
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fifa = pd.read_csv(r'C:\\Users\\viniciushc\\Git_Vinicius\\fifa_2022\\data\\international_matches.csv')"
+    "df_fifa = pd.read_csv(r'C:\\Users\\viniciushc\\Desktop\\fifa_project\\fifa_2022\\data\\international_matches.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "4                            NaN  "
       ]
      },
-     "execution_count": 382,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "23920                          79.3                           70.8  "
       ]
      },
-     "execution_count": 383,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "(23921, 25)"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3865,7 +3865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('house_prices')",
+   "display_name": "smoke_env",
    "language": "python",
    "name": "python3"
   },
@@ -3879,12 +3879,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a34368bd45ad382a3961332f158568e83c3539ee760daa5f7417eafa00ecbed"
+    "hash": "26f815ff9dfdeab5fc8a48f296d50161cfc5ab35b8d32f5ec20718ba1475be4b"
    }
   }
  },
